# iceterm

./: .gitignore  .tmux  IceTermJNI.sln  IceTermJNI.vcxproj  README.md
ConEmuHook/: ConEmuHook.cpp  ConEmuHook.h  ConEmuHook.vcxproj
IceTermJNI/: IceTermJNI.vcxproj  IceTermJNI.vcxproj.filters  fheaders.h
PipeClient/: CPipeClient.cpp  CPipeClient.h  PipeClient.vcxproj  PipeClient.vcxproj.filters  PipeClientDriver.cpp  PipeConst.cpp
PipeServer/: CPipeClient.cpp  CPipeServer.cpp  CPipeServer.h  PipeServer.vcxproj  (+2 more)
src/: CMakeLists.txt
src/conemu/: AnsiLog.java  AnsiStreamChunkEvent.java  ConEmuConstants.java  ConEmuControl.java  ConEmuSession.java  ConEmuStartInfo.java  GetInfoRoot.java  GuiMacroBuilder.java  GuiMacroExecutor.java  GuiMacroResult.java  States.java  WhenConsoleProcessExits.java
src/conemu/jni/: ConEmuPipeServer_N.cpp  ConEmuPipeServer_N.java  GuiMacroExecutor_N.cpp  GuiMacroExecutor_N.exp  GuiMacroExecutor_N.java  GuiMacroExecutor_N.lib  conemu_jni_ConEmuPipeServer_N.h  conemu_jni_GuiMacroExecutor_N.h
src/conemu/util/: CommandLineBuilder.java  ProcessExitDetector.java  ProcessListener.java  WinApi.java
src/conemu/util/tasks/: AggregateException.java  AndroidExecutors.java  BoltsExecutors.java  CancellationToken.java  CancellationTokenRegistration.java  CancellationTokenSource.java  Capture.java  Continuation.java  ExecutorException.java  Task.java  TaskCompletionSource.java  UnobservedErrorNotifier.java  UnobservedTaskException.java
src/conemuhook/: input_helper.cpp  input_helper.h  input_hook.cpp  logger.cpp  post_event.cpp  system_properties.cpp
src/conemuhook/conemupipe/: pipe_client.cpp  pipe_client.h  pipe_client_driver.cpp  pipe_server.cpp  pipe_server.h  pipe_server_driver.cpp
src/conemuhook/include/: pipe_const.h  uiohook.h
src/iceterm/: EnvironmentVariablesDataOptions.kt  IceTermOptionsConfigurable.java  IceTermOptionsProvider.kt  IceTermPanel.java  IceTermProjectSettingsProvider.kt  IceTermSettingsPanel.form  IceTermSettingsPanel.java  IceTermToolWindow.form  IceTermToolWindow.java  IceTermToolWindowFactory.java  IceTermView.java  LocalTerminalCustomizer.java
src/ideaconemu/: ConEmuPanel.java  ConEmuToolWindow.form  ConEmuToolWindow.java  ConEmuToolWindowFactory.java  ConEmuView.java  JNIHelper.cpp  JNIHelper.java  ideaconemu_JNIHelper.h
src/java/org/iceterm/: EnvironmentVariablesDataOptions.kt  IceTermFocusHandler.java  IceTermKeyListener.java  IceTermMouseListener.java  IceTermOptionsConfigurable.java  IceTermOptionsProvider.kt  IceTermPanel.java  IceTermPostStartupActivity.java  IceTermProjectOptionsProvider.kt  IceTermProjectSettingsProvider.kt  IceTermSettingsPanel.form  IceTermSettingsPanel.java  IceTermToolWindow.form  IceTermToolWindow.java  IceTermToolWindowFactory.java  IceTermView.java  LocalTerminalCustomizer.java  ShortcutTextField.java
src/java/org/iceterm/action/: ConEmuStateChangedListener.java  OpenInConEmuAction.java  OpenInConEmuTabAction.java  OpenInCurrentTab.java  OpenInNewTab.java  RevealFileInTerminalAction.java
src/java/org/iceterm/cehook/: AbstractSwingInputAdapter.java  ConEmuHook.java  GlobalScreen.java  NativeHookException.java  NativeInputEvent.java
src/java/org/iceterm/cehook/dispatcher/: DefaultDispatchService.java  SwingDispatchService.java
src/java/org/iceterm/cehook/example/: NativeHookDemo.java
src/java/org/iceterm/cehook/keyboard/: NativeKeyAdapter.java  NativeKeyEvent.java  NativeKeyListener.java  SwingKeyAdapter.java
src/java/org/iceterm/cehook/mouse/: NativeMouseEvent.java  NativeMouseListener.java
src/java/org/iceterm/ceintegration/: AnsiLog.java  AnsiStreamChunkEvent.java  ConEmuConstants.java  ConEmuControl.java  ConEmuSession.java  ConEmuStartInfo.java  GetInfoRoot.java  GuiMacroBuilder.java  GuiMacroExecutor.java  GuiMacroResult.java  States.java  WhenConsoleProcessExits.java
src/java/org/iceterm/integration/: AnsiLog.java  AnsiStreamChunkEvent.java  ConEmuConstants.java  ConEmuControl.java  ConEmuSession.java  ConEmuStartInfo.java  GetInfoRoot.java  GuiMacroBuilder.java  GuiMacroExecutor.java  GuiMacroResult.java  States.java  WhenConsoleProcessExits.java
src/java/org/iceterm/jni/: ConEmuPipeServer_N.java  GuiMacroExecutor_N.java
src/java/org/iceterm/util/: CommandLineBuilder.java  FileHelper.java  ProcessExitDetector.java  ProcessListener.java  ToolWindowUtils.java  User32Ext.java  WinApi.java
src/java/org/iceterm/util/tasks/: AggregateException.java  AndroidExecutors.java  BoltsExecutors.java  CancellationToken.java  CancellationTokenRegistration.java  CancellationTokenSource.java  Capture.java  Continuation.java  ExecutorException.java  Task.java  TaskCompletionSource.java  UnobservedErrorNotifier.java  UnobservedTaskException.java
src/jni/: CMakeLists.txt  ConEmuPipeServer_N.cpp  GuiMacroExecutor_N.cpp  detect_cpu_achitectures.cmake  jni_Converter.cpp  jni_Converter.h  jni_Errors.cpp  jni_EventDispacher.cpp  jni_EventDispacher.h  jni_EventDispatcher.cpp  jni_EventDispatcher.h  jni_Globals.cpp  jni_Globals.h  jni_Logger.cpp  org_iceterm_cehook_ConEmuHook.cpp  org_iceterm_cehook_ConEmuHook.h  org_iceterm_cehook_GlobalScreen.cpp  org_iceterm_cehook_GlobalScreen.h  org_iceterm_ceintegration_GuiMacroExecutor.cpp  org_iceterm_ceintegration_GuiMacroExecutor.h  org_iceterm_jni_ConEmuPipeServer_N.h  org_iceterm_jni_GuiMacroExecutor_N.h  org_jnativehook_GlobalScreen.cpp
src/jni/cehook/: input_helper.cpp  input_helper.h  input_hook.cpp  jni_Errors.cpp  jni_Errors.h  jni_EventDispatcher.cpp  jni_Globals.cpp  jni_Globals.h  jni_Load.cpp  jni_Logger.h  logger.cpp  post_event.cpp
src/jni/cehook/cepipe/: pipe_client.cpp  pipe_client.h  pipe_server.cpp  pipe_server.h
src/jni/cehook/include/: pipe_const.h  uiohook.h
src/jni/include/: org_iceterm_cehook_NativeInputEvent.h  org_iceterm_cehook_keyboard_NativeKeyEvent.h  org_iceterm_cehook_mouse_NativeMouseEvent.h  org_jnativehook_NativeInputEvent.h  org_jnativehook_keyboard_NativeKeyEvent.h
src/pipeclient/: CPipeClient.h  PipeClientDriver.cpp  PipeClientDriver.h
src/pipeserver/: CPipeServer.cpp  PipeServerDriver.cpp
(+1 files in other folders)
